AC_INIT(game-container,1.0)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_MACRO_DIR([m4])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

PKG_CHECK_MODULES([CAPNP], [capnp])
PKG_CHECK_MODULES([CAP], [libcap])

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_LANG_PUSH([C++])
AX_CXX_COMPILE_STDCXX_14([ext])
AC_LANG_POP([C++])

AC_OUTPUT(Makefile)
